--- a/conf/application.conf
+++ b/conf/application.conf
@@ -329,21 +329,21 @@ play.evolutions {
 # https://www.playframework.com/documentation/latest/SettingsJDBC
 # ~~~~~
 # Play doesn't require a JDBC database to run, but you can easily enable one.
-#
-# libraryDependencies += jdbc
-#
+
+libraryDependencies += jdbc
+
 play.db {
   # The combination of these two settings results in "db.default" as the
   # default JDBC pool:
-  #config = "db"
-  #default = "default"
+  config = "db"
+  default = "default"
 
   # Play uses HikariCP as the default connection pool.  You can override
   # settings by changing the prototype:
   prototype {
     # Sets a fixed JDBC connection pool size of 50
-    #hikaricp.minimumIdle = 50
-    #hikaricp.maximumPoolSize = 50
+    hikaricp.minimumIdle = 50
+    hikaricp.maximumPoolSize = 50
   }
 }
 
@@ -371,5 +371,5 @@ db {
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
+  default.logSql=true
 }
