#master : Creating forms on your Play application

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,6 +100,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+  disabled+=play.filters.csrf.CSRFFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -233,6 +234,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+  disabled+=play.filters.csrf.CSRFFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
